# categorizer

./: .gitignore  LICENSE  Makefile  Procfile  Readme.md  categorizer.cabal
src/: Main.hs
src/Categorizer/: Configuration.hs  Rdf.hs
src/Categorizer/Text/: Data.hs  Document.hs  Matcher.hs  Parser.hs  Tokenizer.hs
src/Categorizer/Util/: IO.hs  List.hs  Maybe.hs
src/Categorizer/Wai/: Application.hs  Data.hs
static/: index.html
static/css/: screen.css
static/js/: app.js
